fix: rend le header toujours visible

--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -57,6 +57,7 @@ a:hover {
 }
 
 .site-header {
+  z-index: 1;
   background-color: #fff0;
 }
 
